<resources>
    <string name="app_name">RêntHûb</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_version_info">RentHub Version 0.1 </string>
    <string name="title_activity_como_es">comoEs</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="azulMarinoTint">¡Buenas tardes!</string>

    <string name="notification_channel_id">basic_notification</string>
    <string name="privacidad_ubicacion_upload">¡Recuerda! No es necesario que introduzcas una dirección exacta, únicamente una ubicación aproximada del inmueble.\n¡Tu privacidad es lo más importante ante todo!</string>
    <string name="privacidad_informacion_perfil">Esta información es solo visible para ti.</string>
    <string name="privacidad_aviso_correo">Elige bien el correo,\nya que este NO podrá ser cambiado en el futuro.</string>
    <string name="buscar_fragment_name">Buscar</string>
    <string name="buscar_result_fragment_name">Resultados</string>
    <string name="mensaje_fragment_name">Mensajes</string>
    <string name="publicar_fragment_name">Publicar</string>
    <string name="contrato_fragment_name">Contratos</string>
    <string name="perfil_fragment_name">Perfil</string>
    <string name="configuracion_activity_name">Perfil</string>
    <string name="ubicacion_desconocida">Ubicación desconocida</string>
    <string name="informacion_privada">Información privada</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo</string>
    <string name="edad">Edad</string>
    <string name="genero">Género</string>
    <string name="anuncios">Anuncios</string>
    <string name="valoraciones">Valoraciones</string>
    <string name="buscar_button">Realizar Búsqueda!</string>
    <string name="continuar_button">continuar</string>
    <string name="register_button">registrarse</string>
    <string name="buscar_input_hint">Ciudad, barrio, calle...</string>
    <string name="saludo_mañana">Buenos días</string>
    <string name="saludo_tarde">Buenas tardes</string>
    <string name="saludo_noche">Buenas noches</string>
    <string name="busquedas_recientes">Búsquedas recientes</string>
    <string name="inmuebles_guardados">Inmuebles guardados</string>
    <string name="vivienda">Vivienda</string>
    <string name="garaje">Garaje</string>
    <string name="habitacion">Habitación</string>
    <string name="oficina">Oficina</string>
    <string name="local">Local</string>
    <string name="trastero">Trastero</string>
    <string name="terreno">Terreno</string>
    <string name="nave">Nave</string>
    <string name="no_inmuebles_guardados">Todavía no has guardado nada en favoritos</string>
    <string name="no_busquedas_recientes">Todavía no has realizado búsquedas</string>


</resources>