<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    tools:context=".view.fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/profile_navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/bttnSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_button_03"
                android:elevation="8dp"
                android:padding="8dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/settings_sliders"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tvWhatFragment2"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:background="@drawable/bg_title"
                android:elevation="8dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:paddingLeft="40dp"
                android:paddingEnd="40dp"
                android:text="@string/perfil_fragment_name"
                android:textAlignment="center"
                android:textColor="@color/azulMarino"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivPfpProfile"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:src="@color/negroMedio"
                app:civ_circle_background_color="@color/azulClaro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWhatFragment2" />

            <TextView
                android:id="@+id/tvUbicacion"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/ubicacion_desconocida"
                android:textColor="@color/negroMedio"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivPfpProfile"
                app:layout_constraintTop_toBottomOf="@+id/tvBiografia" />

            <TextView
                android:id="@+id/tvPronombres"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:background="@drawable/bg_button_03"
                android:fontFamily="@font/roboto_medium"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="not found"
                android:textColor="@color/blanco"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/ivPfpProfile"
                app:layout_constraintEnd_toEndOf="@+id/ivPfpProfile"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="@+id/ivPfpProfile"
                app:layout_constraintTop_toTopOf="@+id/ivPfpProfile"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tvBiografia"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="-"
                android:textAlignment="viewStart"
                android:textColor="@color/negroMedio"
                android:textSize="14sp"
                app:autoSizeTextType="none"
                app:layout_constraintBottom_toTopOf="@+id/tvUbicacion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivPfpProfile"
                app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_bold"
                android:text="-"
                android:textColor="@color/azulMarino"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/tvBiografia"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivPfpProfile"
                app:layout_constraintTop_toBottomOf="@+id/tvWhatFragment2" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consPrivateInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUbicacion">

                <View
                    android:id="@+id/view10"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="27dp"
                    android:layout_marginEnd="24dp"
                    android:background="@color/azulClaro"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="31dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/privacidad_informacion_perfil"
                    android:textAlignment="center"
                    android:textColor="@color/negroMedio"
                    android:textColorHint="#656565"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/informacion_privada"
                    android:textColor="@color/azulClaro"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/view10"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/telefono"
                    android:textColor="@color/azulMarino"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <TextView
                    android:id="@+id/tvTelefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="-"
                    android:textColor="@color/negroMedio"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/correo"
                    android:textColor="@color/azulMarino"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/tvCorreo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="-"
                    android:textColor="@color/negroMedio"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/textView12"
                    app:layout_constraintTop_toBottomOf="@+id/tvTelefono" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/edad"
                    android:textColor="@color/azulMarino"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

                <TextView
                    android:id="@+id/tvEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="-"
                    android:textColor="@color/negroMedio"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/tvCorreo" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/genero"
                    android:textColor="@color/azulMarino"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/tvGenero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="-"
                    android:textColor="@color/negroMedio"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/textView11"
                    app:layout_constraintTop_toBottomOf="@+id/tvEdad" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/profile_navigation"
            style="@style/ProfileNavigation"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="6dp"
            android:theme="@style/ProfileNavigation"
            app:compatShadowEnabled="true"
            app:itemIconSize="30dp"
            app:labelVisibilityMode="auto"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
            app:menu="@menu/profile_navigation">

        </com.google.android.material.bottomnavigation.BottomNavigationView>

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/azulClaro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_navigation" />

        <FrameLayout
            android:id="@+id/frame_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>